// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuditLogEvent/> render() should not render when tag is missing 1`] = `""`;

exports[`<AuditLogEvent/> render() should not render when the content is missing 1`] = `""`;

exports[`<AuditLogEvent/> render() should not render when the executed rule is a system rule 1`] = `""`;

exports[`<AuditLogEvent/> render() should render should render via team auto assignment when the event is auto assigned 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          person_add
        </i>
      </div>
      <ActionName
        key="action-name"
      >
        Assigned
      </ActionName>
      <Filler>
        via Team auto-assignment
      </Filler>
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render when the customer has changed - name is empty 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          people
        </i>
      </div>
      <ActionName>
        Customer changed from
         
        <a
          href="/app/customer/2"
        >
          Customer #2
        </a>
         
        to
         
        <a
          href="/app/customer/3"
        >
          Customer #3
        </a>
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render when the customer has changed 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          people
        </i>
      </div>
      <ActionName>
        Customer changed from
         
        <a
          href="/app/customer/2"
        >
          customer 2
        </a>
         
        to
         
        <a
          href="/app/customer/3"
        >
          customer 3
        </a>
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render when the event has been added via a rule 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          loop
        </i>
      </div>
      <ActionName>
        Reopened
      </ActionName>
      <Filler>
        via rule
      </Filler>
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.500000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render when the event is the last component to display before the reply area 1`] = `
<div
  className="component last"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          loop
        </i>
      </div>
      <ActionName>
        Reopened
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render when the rule has a triggering event type 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          settings
        </i>
      </div>
      <div
        id="rule-code-1-foo"
      >
        <ActionName>
          Rule "
          <a
            href="/app/settings/rules/1"
          >
            Rule 1
          </a>
          " executed
        </ActionName>
        <Filler>
          on "
          ticket created
          "
        </Filler>
      </div>
      <Tooltip
        placement="top"
        target="rule-code-1-foo"
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
  <div
    className="failedActions"
  />
</div>
`;

exports[`<AuditLogEvent/> render() should render when the rule has failed actions 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          settings
        </i>
      </div>
      <div
        id="rule-code-1-foo"
      >
        <ActionName>
          Rule "
          <a
            href="/app/settings/rules/1"
          >
            Rule 1
          </a>
          " executed
        </ActionName>
        <Filler>
          on "
          ticket created
          "
        </Filler>
      </div>
      <Tooltip
        placement="top"
        target="rule-code-1-foo"
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
  <div
    className="failedActions"
  >
    <div
      className="failedAction"
      key="action-0"
    >
      <span
        className="failureName"
      >
        Apply macro
         
      </span>
      failed:
      <span
        className="failureReasonWarning"
      >
        Can only auto-reply to a given customer once every 5 minutes.
      </span>
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render when the ticket subject updated data is null 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          mode
        </i>
      </div>
      <ActionName
        key="name"
      >
        Subject updated
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render when the user ID is missing 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          loop
        </i>
      </div>
      <ActionName>
        Reopened
      </ActionName>
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type rule-executed 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          settings
        </i>
      </div>
      <div
        id="rule-code-1-foo"
      >
        <ActionName>
          Rule "
          <a
            href="/app/settings/rules/1"
          >
            Rule 1
          </a>
          " executed
        </ActionName>
      </div>
      <Tooltip
        placement="top"
        target="rule-code-1-foo"
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
  <div
    className="failedActions"
  />
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-assigned 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          person_add
        </i>
      </div>
      <ActionName
        key="action-name"
      >
        Assigned
      </ActionName>
      <Filler
        key="to"
      >
        to
      </Filler>
      <AgentLabel
        className="assigneeLabel"
        key="assign-label"
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-assigned and missing assignee 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          person_add
        </i>
      </div>
      <ActionName
        key="action-name"
      >
        Assigned
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-closed 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon success"
      >
        <i
          className="material-icons"
        >
          done
        </i>
      </div>
      <ActionName>
        Closed
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-created 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          add
        </i>
      </div>
      <ActionName>
        Created
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-customer-updated 1`] = `""`;

exports[`<AuditLogEvent/> render() should render with event type ticket-marked-spam 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon warning"
      >
        <i
          className="material-icons"
        >
          flag
        </i>
      </div>
      <ActionName>
        Marked as spam
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-merged 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          call_merge
        </i>
      </div>
      <ActionName>
        Merged
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-message-summary-created 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          email
        </i>
      </div>
      <ActionName>
        <b>
          Chat summarized
        </b>
         -
         
        <a
          href="#"
          onClick={[Function]}
        >
          <u>
            Unseen chat messages
          </u>
        </a>
         
        were sent by email
         
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-reopened 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          loop
        </i>
      </div>
      <ActionName>
        Reopened
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-self-unsnoozed 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          timer_off
        </i>
      </div>
      <ActionName>
        Snooze delay ended
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-snoozed 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          timer
        </i>
      </div>
      <ActionName>
        Snoozed
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-subject-updated 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          mode
        </i>
      </div>
      <ActionName
        key="name"
      >
        Subject updated
      </ActionName>
      <span
        className="equalFiller"
        key="from"
      >
        from
      </span>
      <span
        className="actionName"
        key="old"
      >
        foo
      </span>
      <span
        className="equalFiller"
        key="to"
      >
        to
      </span>
      <span
        className="actionName"
        key="new"
      >
        bar
      </span>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-tags-added 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          local_offer
        </i>
      </div>
      <ActionName
        key="action-name-left"
      >
        Tagged
      </ActionName>
      <TagLabel
        className="equalFiller"
        key="1"
        style={Object {}}
      >
        tag-1
      </TagLabel>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-tags-added and several tags 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          local_offer
        </i>
      </div>
      <ActionName
        key="action-name-left"
      >
        Tagged
      </ActionName>
      <TagLabel
        className="equalFiller"
        key="1"
        style={Object {}}
      >
        tag-1
      </TagLabel>
      <TagLabel
        className="equalFiller"
        key="2"
        style={Object {}}
      >
        tag-2
      </TagLabel>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-tags-removed 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          local_offer
        </i>
      </div>
      <ActionName
        key="action-name-left"
      >
        Untagged
      </ActionName>
      <TagLabel
        className="equalFiller"
        key="1"
        style={Object {}}
      >
        tag-1
      </TagLabel>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-tags-removed and several tags 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          local_offer
        </i>
      </div>
      <ActionName
        key="action-name-left"
      >
        Untagged
      </ActionName>
      <TagLabel
        className="equalFiller"
        key="1"
        style={Object {}}
      >
        tag-1
      </TagLabel>
      <TagLabel
        className="equalFiller"
        key="2"
        style={Object {}}
      >
        tag-2
      </TagLabel>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-team-assigned 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          group_add
        </i>
      </div>
      <ActionName
        key="action-name"
      >
        Assigned
      </ActionName>
      <Filler
        key="to"
      >
        to
      </Filler>
      <TeamLabel
        className="assigneeLabel"
        key="team-label"
        name="Team 1"
        shouldDisplayAvatar={false}
        shouldDisplayTeamIcon={false}
      />
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-team-assigned and missing assignee 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          group_add
        </i>
      </div>
      <ActionName
        key="action-name"
      >
        Assigned
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-team-unassigned 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          person_add_disabled
        </i>
      </div>
      <ActionName>
        Unassigned from team
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-trashed 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon danger"
      >
        <i
          className="material-icons"
        >
          delete
        </i>
      </div>
      <ActionName>
        Deleted
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-unassigned 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          person_add_disabled
        </i>
      </div>
      <ActionName>
        Unassigned from user
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-unmarked-spam 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          undo
        </i>
      </div>
      <ActionName>
        Unmarked as spam
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-untrashed 1`] = `
<div
  className="component"
>
  <div
    className="event"
  >
    <div
      className="content"
    >
      <div
        className="icon"
      >
        <i
          className="material-icons"
        >
          undo
        </i>
      </div>
      <ActionName>
        Undeleted
      </ActionName>
      <Filler>
        by
      </Filler>
      <AgentLabel
        className=""
        name="User 1"
        profilePictureUrl=""
        shouldDisplayAvatar={false}
      />
    </div>
    <Connect(DatetimeLabelContainer)
      className="date text-faded"
      dateTime="2019-11-15 19:00:00.000000"
    />
  </div>
</div>
`;
